--- a/index.html
+++ b/index.html
@@ -259,6 +259,9 @@
 						<a href="project1/index.html" class="project1" target="portfolio">
 							사이트 바로가기
 						</a>
+						<a href="project1_review/index.html" class="project1_review" target="review">
+							사용자정의 바로가기
+						</a>
 					</div>
 				</div>
 				<div id="pc1" class="pc">
